2010-06-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/porter/porter.py:
	* flumotion/component/misc/porter/porter.xml:
	Revert previous patch, octal values are being interpreted as integer
	when read from the configuration.

2010-06-14  Jan Urbanski  <jurbanski@flumotion.com>

	* flumotion/component/misc/porter/porter.xml:
	Add a socket-mode property that specifies the permissions of the porter
	socket (in octal), defaulting to 0666.
	* flumotion/component/misc/porter/porter.py:
	Use the socket-mode property.

2010-06-14  Jan Urbanski  <jurbanski@flumotion.com>

	patch by: Alvin Delagon

	* bin/flumotion-admin-text.in:
	* bin/flumotion-admin.in:
	* bin/flumotion-command.in:
	* bin/flumotion-inspect.in:
	* bin/flumotion-job.in:
	* bin/flumotion-launch.in:
	* bin/flumotion-manager.in:
	* bin/flumotion-nagios.in:
	* bin/flumotion-rrdmon.in:
	* bin/flumotion-tester.in:
	* bin/flumotion-worker.in:
	* bin/flumotion.in:
	Check for .git in addition to .svn to run uninstalled Flumotion from a
	git clone.

2010-06-14  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	reviewed by: Josep Joan Ribas

	* flumotion/component/decoders/generic/generic.py:
	* flumotion/component/decoders/generic/generic.xml:
	Add a blacklist property to forbid the use of GStreamer elements when
	decoding.

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/tester/httpclient.py:
	And delete old commented old-style raises

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion/tester/httpclient.py:
	Don't raise an string as it is not allowed in python2.6 and wіll fail

2010-06-11  Zaheer Abbas Merali  <zaheerabbas at merali dot org>

	* flumotion/component/feedcomponent.py:
	Add remote method to trigger dumping a graphviz dot file of the
	GStreamer pipeline. The job still needs to run with the
	GST_DEBUG_DUMP_DOT_DIR environment variable set.

2010-06-11  Xavier Queralt Mateu  <xqueralt@flumotion.com>

	* flumotion.doap: